css/main.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);

* p {
	margin-top: 0px;
	line-height: 2;
}

body {
	margin: 0px;
	padding: 0px;
	font-family: 'Open Sans', sans-serif;

	background-color: #ffeba4;
}

#nav-bar {
	position: relative;

	z-index: 1;
	background-color: #585858;
	display: block;

	width: 100%;
	height: 3em;

}

#nav-bar div {
	position: relative;
	margin: 0px auto 0px auto;
	width: 95%;
	max-width: 64em;
}

#nav-bar h2 {
	position: relative;
	margin: 0px;

	color: #ffffff;

	line-height: 2em;
	float: left;
}

#header ul {
	float: right;

	margin: 0px;
	padding: 0px;
}

#header li {
	float:left;
	display: block;
	
	text-align: center;
	line-height: 3em;
	
	width: 6em;
	height: 3em;
}

.background {
	position: fixed;
	width: 100%;
	height: 100%;
	bottom: 0px;

	z-index: 1;
}

.background2 {
	position: fixed;
	height: 100%;
	width: 100%;
	right: 0px;
	bottom: 0px;

	float: right;

	z-index: 1;
}

.stripe {
	position:fixed;
	width:100%;
	height: 50%;
	margin: auto;

	top:0;
	bottom:0;
}

.sub-stripe {

	position:relative;
	width:100%;
}

footer {
	z-index: 1;
	background-color: #585858;
	display: block;

	position: fixed;
	bottom: 0px;

	text-align: center;
	line-height: 5em;
	width: 100%;
	height: 6em;
}

footer a {
	color: #ffffff;
	text-align: center;
	text-decoration: none;
}

#main {
	display: block;
	position: relative;
	clear: both;
	z-index: 0;

	padding-top: 1em;
	width: 100%;
	

}

#main-content {
	position: relative;
	z-index: 2;

	width: 98%;
	max-width: 64em;

	margin: 0px auto 6em auto;

	background-color: #fff5d1;
	border-radius: 10px;
}

.row {
	position: relative;
	display: block;
	clear: both;

	margin: 1em 0px 1em 0px;
	padding: 1em;
	max-width: 100%;

	color: #ffffff;
	background-color: #585858;
}

.row img {
	display: block;
	width: 20%;
	height: 20%;
	float: left;

	margin-right: 1em;

	border-radius: 10px;
}

#project-grid {
	padding: 1em;
	z-index: 5;
}

.project-cell {
	padding: 0px auto 0px auto;
	max-width: 20em;

	margin-left: auto;
	margin-right: auto;

	border-color: #585858
}

.project-cell .title {
	clear: both;
	display: block;
	position: relative;
	padding: 10px 0px 10px 0px;

	text-align: center;
	font-size: 18px;

	border-bottom: 1px solid;
}

.project-cell .description {
	display: block;
	position: relative;
	padding: 4px 0px 4px 0px;

	text-align: center;
	font-size: 12px;

	border-bottom: 1px solid;
}

.project-cell .platform {
	display: block;
	position: relative;
	padding: 4px 0px 4px 0px;

	text-align: center;
	font-size: 12px;

	border-bottom: 1px solid;
}

.img-container {
	display: block;
	position: relative;
	overflow: hidden;

	width: auto;
	height: auto;
	max-width: 20em;
	max-height: 20em;

	float: left;
}

.img-container img {
	width: 100%;
	height: auto;
}

